--- a/Project 3 - Clustering of genomes/Project Mixture model.ipynb
+++ b/Project 3 - Clustering of genomes/Project Mixture model.ipynb
@@ -750,7 +750,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems that the number of clusters has to be known a-priori somehow? I'm not sure."
+    "It seems that the number of clusters has to be known a-priori somehow? I'm not sure.\n",
+    "Since mutations happen over time some sort of markov model may be better able to model sequences..."
    ]
   }
  ],
