fix little issue

--- a/Project 3 - Clustering of genomes/Project Mixture model.ipynb
+++ b/Project 3 - Clustering of genomes/Project Mixture model.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
     "print(f\"Representatives off by {np.apply_along_axis(lambda ci: np.linalg.norm(c_simul - ci, axis=1).min(), 1, c)}\")\n",
     "print(f\"Priors off by {np.unique(seq_simul, return_counts=True)[1] / len(seq_simul) + sorted(-pi)}\")\n",
     "allocations = np.argmax(ClassPosterior(s_simul, c, mu, pi), axis=1)\n",
-    "misallocations = (np.unique(allocations, return_counts=True)[1] - np.unique(allocations, return_counts=True)[1]).sum()\n",
+    "misallocations = (np.unique(allocations, return_counts=True)[1] - np.unique(seq_simul, return_counts=True)[1]).sum()\n",
     "print(f\"Mismatched class allocations: {misallocations}/{len(allocations)}\")\n",
     "print(f\"Error rates: {mu}\")"
    ]
