--- a/Project 6 - Gene Prediction/HMM_Gene_prediction.ipynb
+++ b/Project 6 - Gene Prediction/HMM_Gene_prediction.ipynb
@@ -651,7 +651,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Not necessarily, but we more or less can rule out half or so of the intergenetic regions \n",
+    "# while only 'losing' a tenth or so of the coding regions...\n",
+    "\n",
+    "# Use of proper analysis methods on regions predicted by this algo as opposed to the entire genome\n",
+    "# would therefore be somewhat more cost-effective.\n",
+    "\n",
+    "# However, roughly 43% of predicted-coding regions are still intergenic (as opposed to ~53%), \n",
+    "# so the model seems unsatisfactory for any use-case penalizing this manner of error "
+   ]
   },
   {
    "cell_type": "markdown",
