--- a/Project 6 - Gene Prediction/HMM_Gene_prediction.ipynb
+++ b/Project 6 - Gene Prediction/HMM_Gene_prediction.ipynb
@@ -608,7 +608,7 @@
     }
    ],
    "source": [
-    "def create_confusion_matrix(true_sequence, predicted_sequence):\n",
+    "def create_confusion_matrix(true_sequence: np.ndarray[bool], predicted_sequence: np.ndarray[bool]) -> np.ndarray[int]:\n",
     "    eq = (true_sequence == predicted_sequence)\n",
     "    neq = np.logical_not(eq)\n",
     "    true_pos = (eq & true_sequence).sum()\n",
@@ -676,19 +676,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 267,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 2,\n",
+       "        3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3,\n",
+       "        1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1,\n",
+       "        2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2,\n",
+       "        3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2]),\n",
+       " array([0, 1, 1, 1, 3, 1, 1, 3, 3, 2, 1, 1, 3, 1, 0, 3, 1, 0, 1, 1, 2, 0,\n",
+       "        3, 1, 1, 3, 0, 2, 1, 3, 1, 1, 1, 1, 3, 0, 1, 0, 0, 2, 0, 3, 1, 1,\n",
+       "        0, 3, 1, 1, 3, 3, 0, 2, 0, 2, 3, 3, 3, 3, 3, 2, 3, 3, 0, 1, 2, 3,\n",
+       "        0, 3, 1, 0, 3, 1, 1, 1, 0, 2, 1, 2, 2, 3, 2, 2, 0, 1, 2, 3, 3, 2,\n",
+       "        1, 1, 2, 0, 1, 1, 0, 1, 1, 0, 3, 0]))"
+      ]
+     },
+     "execution_count": 267,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def create_seq(N, pi, A, B):\n",
+    "def create_seq(N: int, pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float]):\n",
     "    '''\n",
     "    Return a sequence of N hidden states using Pi and A\n",
     "    and for each hidden state return an observation using B\n",
     "    '''\n",
     "    ## your code here\n",
-    "    pass\n",
+    "    states = np.tile(0, N)\n",
+    "    states[0] = np.random.choice(range(pi.size), p=pi)\n",
+    "    observations = np.tile(0, N)\n",
+    "    observations[0] = np.random.choice(range(B.shape[1]), p=B[0])\n",
+    "    for t in range(1, N):\n",
+    "        states[t] = np.random.choice(range(A.shape[1]), p=A[states[t-1]])\n",
+    "        observations[t] = np.random.choice(range(B.shape[1]), p=B[states[t-1]])\n",
+    "    return states, observations\n",
     "    \n",
-    "    "
+    "create_seq(100, pi, A, B)"
    ]
   },
   {
