--- a/Project 6 - Gene Prediction/HMM_Gene_prediction.ipynb
+++ b/Project 6 - Gene Prediction/HMM_Gene_prediction.ipynb
@@ -348,19 +348,19 @@
    "source": [
     "import tqdm # tqdm library for progress bars\n",
     "\n",
-    "def viterbi(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float]):\n",
+    "def viterbi(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float]) -> np.ndarray[int]:\n",
     "    ## initialisation\n",
     "    logA, logB, logpi = np.log(A), np.log(B), np.log(pi)\n",
-    "    T, N = len(allX), len(A)\n",
-    "    psi = np.zeros((N, T)) # A = N\n",
+    "    T, N = len(allX), len(pi)\n",
+    "    psi = np.zeros((N, T)) # |A| = N\n",
     "    psi[:, 0] = -1\n",
     "    delta = np.zeros((N, T)) # Initializing delta\n",
     "    delta[:, 0] = logpi + logB[:, allX[0]]\n",
-    "    ## recursion ...  (your code here)\n",
+    "\n",
     "    for t in tqdm.tqdm(range(1, T), total=T, initial=1):\n",
     "        delta[:, t] = (np.vstack(delta[:, t-1]) + logA).max(0) + logB[:, allX[t]]\n",
     "        psi[:, t] = np.argmax(np.vstack(delta[:, t-1]) + logA, axis=0)\n",
-    "    Sstar = delta[:, T-1].max()\n",
+    "\n",
     "    sstar = np.tile(0, T)\n",
     "    sstar[T-1] = np.argmax(delta[:, T-1])\n",
     "    for t in range(T-2, -1, -1):\n",
@@ -1232,10 +1232,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:00<00:00, 2990.24it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         0.86363636 0.62627986 0.74136689]\n",
+      " [0.         0.13636364 0.37372014 0.25863311]] \n",
+      " [-1.79175947 -1.69644929 -1.50521441 -1.95083123] \n",
+      " [0.0007148  0.00024936]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# point 1\n",
+    "def forward(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float]) -> tuple[np.ndarray, np.ndarray]:\n",
+    "    T, N = len(allX), len(pi)\n",
+    "    f = np.tile(0.0, (N, T))\n",
+    "    f[:, 0] = pi * B[:, allX[0]]\n",
+    "    s = np.tile(0.0, T)\n",
+    "    s[0] = np.log(f[:, 0].sum())\n",
+    "    f[:, 0] /= np.exp(s[0])\n",
+    "\n",
+    "    for t in tqdm.tqdm(range(1, T), initial=1, total=T):\n",
+    "        # for v in range(N):\n",
+    "        #     acc = 0\n",
+    "        #     for u in range(N):\n",
+    "        #         acc += A[u, v] * f[u, t-1]\n",
+    "        #     f[v, t] = B[v, allX[t]] * acc\n",
+    "        # same output as\n",
+    "        f[:, t] = B[:, allX[t]] * (np.vstack(f[:, t-1]) * A).sum(0)\n",
+    "        s[t] = np.log(f[:, t].sum())\n",
+    "        f[:, t] /= np.exp(s[t])\n",
+    "    return f, s\n",
+    "\n",
+    "f, s = forward(np.array([2,6,6,3])-1, np.array([1,0]), np.array([[0.95, 0.05],[0.1, 0.9]]), np.array([[1/6,1/6,1/6,1/6,1/6,1/6],[0.1,0.1,0.1,0.1,0.1,0.5]]))\n",
+    "print(f, \"\\n\", s, \"\\n\", np.exp(np.log(f[:, -1]) + s.sum()))\n",
+    "\n",
+    "# i had some issues with this, but i'm fairly sure the slides are wrong\n",
+    "# f_F(2) ought to be 0.026389 not 0.26389\n",
+    "# and e_v[x_t] ought not to be calculated twice or based on previous values\n",
+    "# i.e. 1/6 * (0.026389 * 0.95 + 0.004167 * 0.9)\n",
+    "# rather than 1/6 * (0.026389 * 0.95 + 0.004167 * 0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.19889534 0.35997196 0.60493827 0.5       ]\n",
+      " [0.80110466 0.64002804 0.39506173 0.5       ]] \n",
+      " [-1.00237051 -1.22581455 -2.0024805   0.69314718]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# point 2\n",
+    "def backward(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float]) -> tuple[np.ndarray, np.ndarray]:\n",
+    "    T, N = len(allX), len(pi)\n",
+    "    b = np.tile(0.0, (N, T))\n",
+    "    b[:, -1] = 1\n",
+    "    s = np.tile(0.0, T)\n",
+    "    s[-1] = np.log(b[:, -1].sum())\n",
+    "    b[:, -1] /= np.exp(s[-1])\n",
+    "\n",
+    "    for t in tqdm.tqdm(range(T-2, -1, -1), initial=1, total=T):\n",
+    "        # for u in range(N):\n",
+    "        #     for v in range(N):\n",
+    "        #         b[u, t] += A[u, v] * B[v, allX[t+1]] * b[v, t+1]\n",
+    "        # same output as\n",
+    "        b[:, t] = (A * B[:, allX[t+1]] * b[:, t+1]).sum(1)\n",
+    "        s[t] = np.log(b[:, t].sum())\n",
+    "        b[:, t] /= np.exp(s[t])\n",
+    "    return b, s\n",
+    "\n",
+    "b, s = backward(np.array([2,6,6,3])-1, np.array([1,0]), np.array([[0.95, 0.05],[0.1, 0.9]]), np.array([[1/6,1/6,1/6,1/6,1/6,1/6],[0.1,0.1,0.1,0.1,0.1,0.5]]))\n",
+    "print(b, \"\\n\", s)\n",
+    "\n",
+    "# not entirely sure about the initialisation... wikipedia says init is 1, so i just went with that\n",
+    "# ought to be fine for learning? not sure about actual probas though"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:00<00:00, 2995.22it/s]\n",
+      "100%|██████████| 4/4 [00:00<?, ?it/s]\n",
+      "100%|██████████| 3/3 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-6.94425439 -7.19168924 -7.27334328 -7.24351404]\n",
+      " [       -inf -8.46203008 -8.2157178  -8.29659918]] \n",
+      " [[1.         0.78080109 0.71957905 0.74136689]\n",
+      " [0.         0.21919891 0.28042095 0.25863311]] \n",
+      " [1. 1. 1. 1.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "C:\\Users\\Fritz\\AppData\\Local\\Temp\\ipykernel_1420\\1684230041.py:9: RuntimeWarning: divide by zero encountered in log\n",
+      "  fb = np.log(f) + np.log(b) + sb + sf\n"
+     ]
+    }
+   ],
+   "source": [
+    "# point 3\n",
+    "def forward_backward(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float]) -> tuple[np.ndarray, np.ndarray]:\n",
+    "    f, sf = forward(allX, pi, A, B)\n",
+    "    b, sb = backward(allX, pi, A, B)\n",
+    "    T = len(allX)\n",
+    "    for t in tqdm.tqdm(range(1, T)): # cumulative normalization values\n",
+    "        sf[t] += sf[t-1]\n",
+    "        sb[T-t-1] += sb[T-t]\n",
+    "    fb = np.log(f) + np.log(b) + sb + sf\n",
+    "    return fb\n",
+    "\n",
+    "fb = forward_backward(np.array([2,6,6,3])-1, np.array([1,0]), np.array([[0.95, 0.05],[0.1, 0.9]]), np.array([[1/6,1/6,1/6,1/6,1/6,1/6],[0.1,0.1,0.1,0.1,0.1,0.5]]))\n",
+    "\n",
+    "efb = np.exp(fb)\n",
+    "efb /= efb[:, 0].sum()\n",
+    "print(fb, \"\\n\", efb, \"\\n\", efb.sum(0))\n",
+    "\n",
+    "# we need cumulative normalization values to calculate actual values - we can do this efficiently, though\n",
+    "# fb as joint proba is not normalized to sum to 1 - is missing some constant, i imagine it's P(x_[1:T])\n",
+    "# easy to fix if we leave log space (see above), not but relevant for EM"
+   ]
   }
  ],
  "metadata": {
