--- a/Project 3 - Clustering of genomes/Project Mixture model.ipynb
+++ b/Project 3 - Clustering of genomes/Project Mixture model.ipynb
@@ -366,7 +366,7 @@
     "\n",
     "        condlike_u = conditional_loglikelihood(s, c_u, mu_u, pi_u)\n",
     "        c, mu, pi = c_u, mu_u, pi_u\n",
-    "        if abs(condlike_u - condlikes[-1]) / condlike_u < threshold: # note: stop condition via conditional likelihood, threshold is actually never relevant (changes 0 or >20)\n",
+    "        if abs(condlike_u - condlikes[-1]) / abs(condlike_u) < threshold: # note: stop condition via conditional likelihood, threshold is actually never relevant (changes 0 or >20)\n",
     "            break\n",
     "\n",
     "        condlikes.append(condlike_u)\n",
