--- a/Project 6 - Gene Prediction/HMM_Gene_prediction.ipynb
+++ b/Project 6 - Gene Prediction/HMM_Gene_prediction.ipynb
@@ -1232,14 +1232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 652,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 2990.24it/s]"
+      "100%|██████████| 4/4 [00:00<00:00, 3000.22it/s]"
      ]
     },
     {
@@ -1262,7 +1262,7 @@
    ],
    "source": [
     "# point 1\n",
-    "def forward(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float]) -> tuple[np.ndarray, np.ndarray]:\n",
+    "def forward(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float], bar: bool = True) -> tuple[np.ndarray, np.ndarray]:\n",
     "    T, N = len(allX), len(pi)\n",
     "    f = np.tile(0.0, (N, T))\n",
     "    f[:, 0] = pi * B[:, allX[0]]\n",
@@ -1270,7 +1270,7 @@
     "    s[0] = np.log(f[:, 0].sum())\n",
     "    f[:, 0] /= np.exp(s[0])\n",
     "\n",
-    "    for t in tqdm.tqdm(range(1, T), initial=1, total=T):\n",
+    "    for t in (tqdm.tqdm(range(1, T), initial=1, total=T) if bar else range(1, T)):\n",
     "        # for v in range(N):\n",
     "        #     acc = 0\n",
     "        #     for u in range(N):\n",
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 653,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1323,7 @@
    ],
    "source": [
     "# point 2\n",
-    "def backward(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float]) -> tuple[np.ndarray, np.ndarray]:\n",
+    "def backward(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float], bar: bool = True) -> tuple[np.ndarray, np.ndarray]:\n",
     "    T, N = len(allX), len(pi)\n",
     "    b = np.tile(0.0, (N, T))\n",
     "    b[:, -1] = 1\n",
@@ -1331,7 +1331,7 @@
     "    s[-1] = np.log(b[:, -1].sum())\n",
     "    b[:, -1] /= np.exp(s[-1])\n",
     "\n",
-    "    for t in tqdm.tqdm(range(T-2, -1, -1), initial=1, total=T):\n",
+    "    for t in (tqdm.tqdm(range(T-2, -1, -1), initial=1, total=T) if bar else range(T-2, -1, -1)):\n",
     "        # for u in range(N):\n",
     "        #     for v in range(N):\n",
     "        #         b[u, t] += A[u, v] * B[v, allX[t+1]] * b[v, t+1]\n",
@@ -1350,18 +1350,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 654,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 2995.22it/s]\n",
-      "100%|██████████| 4/4 [00:00<?, ?it/s]\n",
-      "100%|██████████| 3/3 [00:00<?, ?it/s]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1377,25 +1368,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "C:\\Users\\Fritz\\AppData\\Local\\Temp\\ipykernel_1420\\1684230041.py:9: RuntimeWarning: divide by zero encountered in log\n",
+      "C:\\Users\\Fritz\\AppData\\Local\\Temp\\ipykernel_1420\\2438535460.py:9: RuntimeWarning: divide by zero encountered in log\n",
       "  fb = np.log(f) + np.log(b) + sb + sf\n"
      ]
     }
    ],
    "source": [
     "# point 3\n",
-    "def forward_backward(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float]) -> tuple[np.ndarray, np.ndarray]:\n",
-    "    f, sf = forward(allX, pi, A, B)\n",
-    "    b, sb = backward(allX, pi, A, B)\n",
+    "def forward_backward(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float], bar: bool = True) -> tuple[np.ndarray, np.ndarray]:\n",
+    "    f, sf = forward(allX, pi, A, B, bar=bar)\n",
+    "    b, sb = backward(allX, pi, A, B, bar=bar)\n",
     "    T = len(allX)\n",
-    "    for t in tqdm.tqdm(range(1, T)): # cumulative normalization values\n",
+    "    for t in (tqdm.tqdm(range(1, T), initial=1, total=T) if bar else range(1, T)): # cumulative normalization values\n",
     "        sf[t] += sf[t-1]\n",
     "        sb[T-t-1] += sb[T-t]\n",
     "    fb = np.log(f) + np.log(b) + sb + sf\n",
     "    return fb\n",
     "\n",
-    "fb = forward_backward(np.array([2,6,6,3])-1, np.array([1,0]), np.array([[0.95, 0.05],[0.1, 0.9]]), np.array([[1/6,1/6,1/6,1/6,1/6,1/6],[0.1,0.1,0.1,0.1,0.1,0.5]]))\n",
+    "fb = forward_backward(np.array([2,6,6,3])-1, np.array([1,0]), np.array([[0.95, 0.05],[0.1, 0.9]]), np.array([[1/6,1/6,1/6,1/6,1/6,1/6],[0.1,0.1,0.1,0.1,0.1,0.5]]), bar = False)\n",
     "\n",
     "efb = np.exp(fb)\n",
     "efb /= efb[:, 0].sum()\n",
@@ -1404,6 +1394,87 @@
     "# we need cumulative normalization values to calculate actual values - we can do this efficiently, though\n",
     "# fb as joint proba is not normalized to sum to 1 - is missing some constant, i imagine it's P(x_[1:T])\n",
     "# easy to fix if we leave log space (see above), not but relevant for EM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 658,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10000/10000 [00:00<00:00, 10058.48it/s]\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s]C:\\Users\\Fritz\\AppData\\Local\\Temp\\ipykernel_1420\\2438535460.py:9: RuntimeWarning: divide by zero encountered in log\n",
+      "  fb = np.log(f) + np.log(b) + sb + sf\n",
+      "C:\\Users\\Fritz\\AppData\\Local\\Temp\\ipykernel_1420\\1058893769.py:8: RuntimeWarning: divide by zero encountered in log\n",
+      "  Quv[:, :, 0] = np.log(pi)\n",
+      "100%|██████████| 100/100 [02:16<00:00,  1.36s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.95 0.05]\n",
+      " [0.1  0.9 ]] \n",
+      " [[0.16666667 0.16666667 0.16666667 0.16666667 0.16666667 0.16666667]\n",
+      " [0.1        0.1        0.1        0.1        0.1        0.5       ]] \n",
+      "\n",
+      "[[0.90725731 0.09274269]\n",
+      " [0.21367372 0.78632628]] \n",
+      " [[0.17192541 0.17725766 0.17459209 0.15732046 0.16347153 0.15543285]\n",
+      " [0.09254589 0.09281562 0.07549877 0.09084282 0.10805871 0.54023819]] \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def EM(allX: np.ndarray[int], pi: np.ndarray[float], A: np.ndarray[float], B: np.ndarray[float], threshold: float = 1e-5, max_iters: int = 1000):\n",
+    "    T, N = len(allX), len(pi)\n",
+    "    f, s = forward(allX, pi, A, B, bar=False)\n",
+    "    loglike = np.log(f[:, -1]).sum() + s.sum()\n",
+    "    for _ in tqdm.tqdm(range(max_iters), initial = 0, total = max_iters):\n",
+    "        Qu = forward_backward(allX, pi, A, B, bar=False)\n",
+    "        Quv = np.tile(0.0, (N, N, T))\n",
+    "        Quv[:, :, 0] = np.log(pi)\n",
+    "        # for t in tqdm.tqdm(range(1, T), initial=1, total=T):\n",
+    "            # for u in range(N):\n",
+    "            #     for v in range(N):\n",
+    "            #         Quv[u, v, t] = Qu[u, t-1] + np.log(A[u, v])\n",
+    "            # same output as\n",
+    "        for t in range(1, T):\n",
+    "            Quv[:, :, t] = (np.log(A[:, :]) + np.vstack(Qu[:, t-1]))\n",
+    "        renorm = np.where(np.isfinite(Qu), Qu, 0).mean()\n",
+    "        Qu -= renorm\n",
+    "        Quv -= renorm\n",
+    "        Au = (np.exp(Quv[:, :, 2:]).sum(2) / np.exp(Qu[:, :]).sum(1)).T\n",
+    "        Au = Au / np.vstack(Au.sum(1))\n",
+    "        Bu = np.zeros_like(B)\n",
+    "        for u in range(N):\n",
+    "            for a in range(B.shape[1]):\n",
+    "                Bu[u, a] = (np.exp(Qu[u, :]) * np.where(allX==a, 1, 0)).sum() / (np.exp(Qu[u, :])).sum()\n",
+    "        fu, su = forward(allX, pi, Au, Bu, bar=False)\n",
+    "        loglikeu = np.log(fu[:, -1]).sum() + su.sum()\n",
+    "        if (loglike - loglikeu) / loglikeu < threshold:\n",
+    "            break\n",
+    "        A, B = Au, Bu\n",
+    "    return A, B\n",
+    "\n",
+    "A, B, pi = np.array([[0.95, 0.05],[0.1, 0.9]]), np.array([[1/6,1/6,1/6,1/6,1/6,1/6],[0.1,0.1,0.1,0.1,0.1,0.5]]), np.array([1,0])\n",
+    "s, o = create_seq(10000, pi, A, B)\n",
+    "A2, B2 = EM(o, pi, np.array([[0.9, 0.1],[0.2, 0.8]]), B, max_iters=100)\n",
+    "print(A, \"\\n\", B, \"\\n\")\n",
+    "print(A2,\"\\n\", B2,\"\\n\")\n",
+    "# doesn't work particularly well, not sure why"
    ]
   }
  ],
